Animation de contour sur la page 2

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 
     <section class="pageTwo">
         <img class="imgBackground" src="ressources/fond.png" alt="">
-        
+        <div class="borderBox">
+            <div class="border border-left"></div>
+            <div class="border border-right"></div>
+            <div class="border border-bottom"></div>
+            <div class="border border-top"></div>
+        </div>
     </section>
     
 </body>
