--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <section class="pageTwo">
         <img class="imgBackground" src="ressources/fond.png" alt="">
         <div class="borderBox">
+
+            <h1>EXPERIENCE ADAMO</h1>
+            <div class="ligneVertical"></div>
+            <a href="">EXPLORER LE MENU</a>
+
             <div class="border border-left"></div>
             <div class="border border-right"></div>
             <div class="border border-bottom"></div>
